@@ -1,3 +1,5 @@
+- master:
+    - Added: chacha.native.cuda_supported, returns True if cuda kernels were compiled.
 - 1.0.0-rc.3:
     - Added: wheels for Python 3.10.
 - 1.0.0-rc.2:
